css/styles.css
/* SEE https://stackoverflow.com/questions/12168145/vertically-center-content-of-floating-div */

h1, h2, p, a {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

h1 {
    font-size: 500%;
    line-height: 0%;
}

h2 {
    line-height: 0%;
}

footer {
    text-align: center;
}

a.top, footer {
    font-size: 75%;
}

a:link, a:visited {
    color: white;
    text-decoration: underline;
}

a:hover {
    color: white;
    text-decoration: none;
}

.tbox {
    background-color: rgb(46, 117, 182);
    color: white;
    padding: 15px 30px;
}

.mbox {
    padding: 5px 30px;
    border: 4px solid rgb(46, 117, 182);
    font-size: 90%;
}

.pic {
    width: 70px;
    height: 70px;
    padding: 15px;
    border: 2px solid black;
}

.pic2 {
    width: 200px;
    height: 200px;
    border: 2px solid white;
}

.clearfix::after {
    content: "";
    clear: both;
    display: table;
}

